Closed
Bug 167446
Opened 23 years ago
Closed 23 years ago
After deleting a toolbar bookmark, attempting to get info on another toolbar bookmark results in crash
Categories
(Camino Graveyard :: Bookmarks, defect)
Tracking
(Not tracked)
VERIFIED
FIXED
People
(Reporter: chrispetersen, Assigned: sfraser_bugs)
Details
(Keywords: crash)
Attachments
(2 files)
3.74 KB,
text/plain
|
Details | |
1.30 KB,
patch
|
Details | Diff | Splinter Review |
Build: 2002-09-07-05
Platform: OS X 10.2
Expected Results: Get Info panel should appear
What I got: Application crashes
Steps to reproduce:
1) Control -click on any toolbar bookmark and select Get Info menu item.
2) Get Info panel appears. Close this panel.
3) Control -click on the same toolbar bookmark again and select Delete menu item.
4) Now, Control -click on any toolbar bookmark and select Get Info menu item
once more .
5) Application should crash.
Reporter | ||
Comment 1•23 years ago
|
||
![]() |
||
Comment 2•23 years ago
|
||
this:
+ if (![[self window] isVisible])
+ mBookmarkItem = nil;
is all that's needed to fix this bug. the next obvious bug
that comes out of this (and may be filed already - haven't checked)
would be the crash from when you delete the bookmark while the info
window is still open, then click on the info window. the rest of the
patch fixes that bug.
at this point, there may be some extra paranoia in some of the checks
in this info panel, but so what.
Assignee | ||
Comment 3•23 years ago
|
||
Patch checked in -- thanks! I also hooked up the context menu again.
Status: NEW → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•