Fix bug 167446: crash using Info window after deleting bookmark. Also hooked the bookmarks toolbar context menu back up.